fix for "ms-navigation collapse animation issues on Safari"

--- a/src/app/core/directives/ms-navigation/ms-navigation.scss
+++ b/src/app/core/directives/ms-navigation/ms-navigation.scss
@@ -164,6 +164,10 @@
                 background-color: rgba(0, 0, 0, 0.12);
             }
 
+            &.collapsing {
+                background-color: rgba(0, 0, 0, 0.12);
+            }
+
             .has-children {
 
                 &:not(.collapsed) {
@@ -509,7 +513,7 @@
                 width: 100%;
 
                 li {
-                    
+
                     &:not(.active) {
 
                         &:hover {
